force-app/main/default/objects/pubacc_en__c/pubacc_en__c.object-meta.xml
<CustomObject>
    <description>License Entities</description>
    <label>License Entity</label>
    <nameField>
        <label>Call Sign</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>License Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>