force-app/main/default/objects/pubacc_en__c/fields/Attention_Line__c.field-meta.xml
<CustomField>
    <fullName>Attention_Line__c</fullName>
    <label>Attention Line</label>
    <length>35</length>
    <type>Text</type>
</CustomField>