force-app/main/default/objects/pubacc_en__c/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <description>L == Licensed Entity | O == Owner/Parent Company | CL == License Contact</description>
    <inlineHelpText>L == Licensed Entity | O == Owner/Parent Company | CL == License Contact</inlineHelpText>
    <label>Entity Type</label>
    <length>2</length>
    <type>Text</type>
</CustomField>