force-app/main/default/objects/pubacc_en__c/fields/FRN_Network__c.field-meta.xml
<CustomField>
    <fullName>FRN_Network__c</fullName>
    <label>FRN Network</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sprint</fullName>
            </value>
            <value>
                <fullName>T-Mobile</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>