force-app/main/default/objects/pubacc_en__c/fields/Spectrum_Market_Area__c.field-meta.xml
<CustomField>
    <fullName>Spectrum_Market_Area__c</fullName>
    <description>This field is used to capture the Spectrum and market area specific frequencies coming from Cantino</description>
    <inlineHelpText>This field is used to capture the Spectrum and market area specific frequencies coming from Cantino</inlineHelpText>
    <label>Spectrum &amp; Market Area</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>