force-app/main/default/objects/pubacc_en__c/fields/Unique_System_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_System_Identifier__c</fullName>
    <description>Unique System Identifier for the Call Sign</description>
    <label>Unique System Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>